Fix bug preventing alignment of map tiles and geojson layers

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -103,6 +103,10 @@ a:active {
 .leaflet-container, .map-container, #bgw-map {
 	width: 100%;
 	height: 100%;
+
+	&.hidden {
+		visibility: hidden;
+	}
 }
 
 // .leaflet-bottom {
